%% kaps Version History

\name{NEWS}
\title{kaps News}
\encoding{UTF-8}

% --------------------------------------------------------------------------- %
\section{Changes in version 1.1.3 2017-08-13}{
  \itemize{
    \item Update appVeyor.yml for Windows CI.
  }
}
% --------------------------------------------------------------------------- %
\section{Changes in version 1.1.2 2017-08-05}{
  \itemize{
    \item Add registerDynamicSymbols.c
    \item Aad unit.test rountine based on the testthat package.
    \item Update survival function routine using coin::logrank_test().
    \item Bug fixed and performance improved
  }
}
% ---------------------------------------------------------------------------- %
\section{Changes in version 1.0.3 2015-08-22}{
  \itemize{
    \item Update the NAMESPACE to avoid masking problem
    }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.0.2 2014-11-01}{
  \itemize{
    \item Imrpove man pages 
    }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.0.0 2014-03-17}{
  \itemize{
    \item Release an official version
    }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 0.9.26 2013-12-15}{
  \itemize{
    \item Bug fixed in simple permuting algorithm
    \item Adjust a minimum sample size rule to improve end-cut preference
    \item Add validation methods based on the Fisher's combined probability test 
    }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 0.9.25 2013-11-20}{
  \itemize{
    \item Add correction methods for simple permuting kaps()
    }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 0.9.24 2013-11-18}{
  \itemize{
    \item add simple permuting KAPS algorithm