@@ -35,3 +35,9 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 .Rproj.user
+
+# Source compile
+src/*.o
+src/*.so
+src/*.dll
+
