@@ -1,7 +1,7 @@
 Package: kaps
 Title: K-Adaptive Partitioning for Survival Data
-Date: 2017-08-05
-Version: 1.1.3
+Date: 2017-12-02
+Version: 1.1.4
 Authors@R: c(person(given = "Soo-Heang", family = "Eo", role = c("aut","cre"), 
 	email = "eo.sooheang@gmail.com"),
 			person(given = "Seung-Mo", family = "Hong", role = "ctb"),
