@@ -30,11 +30,14 @@ An optimal number of subgroups is determined by a permutation test.
 
 You can install:
 
-* the latest released version from CRAN with
+* the latest released version with
 
     ```R
-    install.packages("kaps")
-    ````
+    if (packageVersion("devtools") < 1.6) {
+      install.packages("devtools")
+    }
+    devtools::install_github("sooheang/kaps", ref = 'v1.1.4')
+    ```
 
 * the latest development version from github with
 
@@ -46,6 +49,10 @@ You can install:
     ```
 
 If you encounter a clear bug, please file a minimal reproducible example on [github](https://github.com/sooheang/kaps/issues). 
+
+## NOTICE
+
+Since 2015, we ONLY use the github repositoty in order to update `kaps`. So, we do not recommend the use of the `kaps` in CRAN.
 
 ## Tutorial 
 
@@ -81,6 +88,7 @@ fit1
 
 # ChangeLog   
 
+* v1.1.4: Solve an issue No.5
 * v1.1.3: Update survival function
 * v1.1.0: Intitial release on GitHub
 
